--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,9 +1,12 @@
-/*
- * Главный файл стилей.
- * Все паршалы подключаются сюда.
- */
+@import './utils/vars';
+@import './utils/reset';
 
-// Стили для файла с примером HTML-фрагмента
-@import './example';
-@import './site-footer';
-@import './site-header';
+@import './components/container';
+@import './components/section-title';
+
+
+@import './layout/header';
+@import './layout/hero';
+@import './layout/about';
+
+@import './layout/mobile-menu';
