--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,18 +1,24 @@
 <div class="mob-menu is-hidden" data-menu>
-  <button type="button" class="menu-close" data-menu-close>
-    <svg class="menu-close-icon" width="24" height="24">
-      <use href="/images/icons.svg#icon-close"></use>
-    </svg>
-  </button>
-  <ul class="mob-menu__list list">
-    <li class="mob-menu__item">Home</li>
-    <li class="mob-menu__item">About me</li>
-    <li class="mob-menu__item">Skills</li>
-    <li class="mob-menu__item">Portfolio</li>
-    <li class="mob-menu__item">Contacts</li>
-  </ul>
-  <ul class="mob-menu__lang-list list">
-    <li class="mob-menu__lang-item">ru</li>
-    <li class="mob-menu__lang-item">en</li>
-  </ul>
+  <div class="container">
+    <button type="button" class="menu-close" data-menu-close>
+      <svg class="menu-close-icon" width="24" height="24">
+        <use href="/images/icons.svg#icon-close"></use>
+      </svg>
+    </button>
+    <ul class="mob-menu__list list">
+      <li class="mob-menu__item"><a class="mob-menu__link link current">Home</a></li>
+      <li class="mob-menu__item"><a class="mob-menu__link link">About me</a></li>
+      <li class="mob-menu__item"><a class="mob-menu__link link">Skills</a></li>
+      <li class="mob-menu__item"><a class="mob-menu__link link">Portfolio</a></li>
+      <li class="mob-menu__item"><a class="mob-menu__link link">Contacts</a></li>
+    </ul>
+    <ul class="mob-menu__lang-list list">
+      <li class="mob-menu__lang-item">
+        <a class="mob-menu__lang-link">ru&thinsp;</a>
+      </li>
+      <li class="mob-menu__lang-item">
+        <a class="mob-menu__lang-link eng current">&thinsp;en</a>
+      </li>
+    </ul>
+  </div>
 </div>
