add imgs, section skills, portfolio added

--- a/src/partials/portfolio.html
+++ b/src/partials/portfolio.html
@@ -1,17 +1,66 @@
 <section class="portfolio">
   <div class="container">
+    <h2 class="section-title">Portfolio</h2>
     <ul class="portfolio__list list">
       <li class="portfolio__item">
-        <picture></picture>
-        <p class="portfolio__text"></p>
+        <picture class="portfolio__img">
+          <source
+            class=""
+            srcset="./images/portfolio-desk-1-1x.jpg 1x, ./images/portfolio-desk-1-2x.jpg 2x"
+            media="(min-width:1024px)"
+          />
+          <source
+            class=""
+            srcset="./images/portfolio-mob-1-1x.jpg 1x, ./images/portfolio-mob-1-2x.jpg 2x"
+            media="(min-width:320px)"
+          />
+          <img
+            srcset="./images/portfolio-mob-1-1x.jpg"
+            src="./images/portfolio-mob-1-1x.jpg"
+            alt="human"
+          />
+        </picture>
+        <p class="portfolio__text">Online fashion store - Homepage</p>
       </li>
       <li class="portfolio__item">
-        <picture></picture>
-        <p class="portfolio__text"></p>
+        <picture class="portfolio__img">
+          <source
+            class=""
+            srcset="./images/portfolio-desk-2-1x.jpg 1x, ./images/portfolio-desk-2-2x.jpg 2x"
+            media="(min-width:1024px)"
+          />
+          <source
+            class=""
+            srcset="./images/portfolio-mob-2-1x.jpg 1x, ./images/portfolio-mob-2-2x.jpg 2x"
+            media="(min-width:320px)"
+          />
+          <img
+            srcset="./images/portfolio-mob-2-1x.jpg"
+            src="./images/portfolio-mob-2-1x.jpg"
+            alt="human"
+          />
+        </picture>
+        <p class="portfolio__text">Reebok Store - Concept</p>
       </li>
       <li class="portfolio__item">
-        <picture></picture>
-        <p class="portfolio__text"></p>
+        <picture class="portfolio__img">
+          <source
+            class=""
+            srcset="./images/portfolio-desk-3-1x.jpg 1x, ./images/portfolio-desk-3-2x.jpg 2x"
+            media="(min-width:1024px)"
+          />
+          <source
+            class=""
+            srcset="./images/portfolio-mob-3-1x.jpg 1x, ./images/portfolio-mob-3-2x.jpg 2x"
+            media="(min-width:320px)"
+          />
+          <img
+            srcset="./images/portfolio-mob-3-1x.jpg"
+            src="./images/portfolio-mob-3-1x.jpg"
+            alt="human"
+          />
+        </picture>
+        <p class="portfolio__text">Braun Landing Page - Concept</p>
       </li>
     </ul>
   </div>
