--- a/src/partials/skills.html
+++ b/src/partials/skills.html
@@ -4,24 +4,156 @@
     <p class="caption">I work in such programs as</p>
     <ul class="skills__list list">
       <li class="skills__item">
-        <img class="skills__img" src="" alt="logo1" />
+        <picture class="skills__img">
+          <source
+            class="skills__img-logo"
+            srcset="./images/ps-1x.jpg 1x, ./images/ps-2x.jpg 2x"
+            media="(min-width:320px)"
+          />
+          <img srcset="./images/ps-1x.jpg" src="./images/ps-1x.jpg" alt="logo-ps" />
+        </picture>
         <p class="skills__text">Adobe Photoshop</p>
-        <div class="skills__stars"></div>
+        <ul class="skills__stars-list list">
+          <li class="skills__stars-item">
+            <svg class="skill__stars" width="20" height="20">
+              <use href="/images/icons.svg#icon-star"></use>
+            </svg>
+          </li>
+          <li class="skills__stars-item">
+            <svg class="skill__stars" width="20" height="20">
+              <use href="/images/icons.svg#icon-star"></use>
+            </svg>
+          </li>
+          <li class="skills__stars-item">
+            <svg class="skill__stars" width="20" height="20">
+              <use href="/images/icons.svg#icon-star"></use>
+            </svg>
+          </li>
+          <li class="skills__stars-item">
+            <svg class="skill__stars" width="20" height="20">
+              <use href="/images/icons.svg#icon-star"></use>
+            </svg>
+          </li>
+          <li class="skills__stars-item">
+            <svg class="skill__stars-gray" width="20" height="20">
+              <use href="/images/icons.svg#icon-star"></use>
+            </svg>
+          </li>
+        </ul>
       </li>
       <li class="skills__item">
-        <img class="skills__img" src="" alt="logo2" />
+        <picture class="skills__img">
+          <source
+            class="skills__img-logo"
+            srcset="./images/ai-1x.jpg 1x, ./images/ai-2x.jpg 2x"
+            media="(min-width:320px)"
+          />
+          <img srcset="./images/ai-1x.jpg" src="./images/ai-1x.jpg" alt="logo-ai" />
+        </picture>
         <p class="skills__text">Adobe Illustrator</p>
-        <div class="skills__stars"></div>
+        <ul class="skills__stars-list list">
+          <li class="skills__stars-item">
+            <svg class="skill__stars" width="20" height="20">
+              <use href="/images/icons.svg#icon-star"></use>
+            </svg>
+          </li>
+          <li class="skills__stars-item">
+            <svg class="skill__stars" width="20" height="20">
+              <use href="/images/icons.svg#icon-star"></use>
+            </svg>
+          </li>
+          <li class="skills__stars-item">
+            <svg class="skill__stars" width="20" height="20">
+              <use href="/images/icons.svg#icon-star"></use>
+            </svg>
+          </li>
+          <li class="skills__stars-item">
+            <svg class="skill__stars-gray" width="20" height="20">
+              <use href="/images/icons.svg#icon-star"></use>
+            </svg>
+          </li>
+          <li class="skills__stars-item">
+            <svg class="skill__stars-gray" width="20" height="20">
+              <use href="/images/icons.svg#icon-star"></use>
+            </svg>
+          </li>
+        </ul>
       </li>
       <li class="skills__item">
-        <img class="skills__img" src="" alt="logo3" />
+        <picture class="skills__img">
+          <source
+            class="skills__img-logo"
+            srcset="./images/ae-1x.jpg 1x, ./images/ae-2x.jpg 2x"
+            media="(min-width:320px)"
+          />
+          <img srcset="./images/ae-1x.jpg" src="./images/ae-1x.jpg" alt="logo-ae" />
+        </picture>
         <p class="skills__text">Adobe After Effects</p>
-        <div class="skills__stars"></div>
+        <ul class="skills__stars-list list">
+          <li class="skills__stars-item">
+            <svg class="skill__stars" width="20" height="20">
+              <use href="/images/icons.svg#icon-star"></use>
+            </svg>
+          </li>
+          <li class="skills__stars-item">
+            <svg class="skill__stars" width="20" height="20">
+              <use href="/images/icons.svg#icon-star"></use>
+            </svg>
+          </li>
+          <li class="skills__stars-item">
+            <svg class="skill__stars" width="20" height="20">
+              <use href="/images/icons.svg#icon-star"></use>
+            </svg>
+          </li>
+          <li class="skills__stars-item">
+            <svg class="skill__stars" width="20" height="20">
+              <use href="/images/icons.svg#icon-star"></use>
+            </svg>
+          </li>
+          <li class="skills__stars-item">
+            <svg class="skill__stars-gray" width="20" height="20">
+              <use href="/images/icons.svg#icon-star"></use>
+            </svg>
+          </li>
+        </ul>
       </li>
       <li class="skills__item">
-        <img class="skills__img" src="" alt="logo4" />
+        <picture class="skills__img">
+          <source
+            class="skills__img-logo"
+            srcset="./images/figma-1x.png 1x, ./images/figma-2x.png 2x"
+            media="(min-width:320px)"
+          />
+          <img srcset="./images/figma-1x.png" src="./images/figma-1x.png" alt="logo-figma" />
+        </picture>
         <p class="skills__text">Figma</p>
-        <div class="skills__stars"></div>
+        <ul class="skills__stars-list list">
+          <li class="skills__stars-item">
+            <svg class="skill__stars" width="20" height="20">
+              <use href="/images/icons.svg#icon-star"></use>
+            </svg>
+          </li>
+          <li class="skills__stars-item">
+            <svg class="skill__stars" width="20" height="20">
+              <use href="/images/icons.svg#icon-star"></use>
+            </svg>
+          </li>
+          <li class="skills__stars-item">
+            <svg class="skill__stars" width="20" height="20">
+              <use href="/images/icons.svg#icon-star"></use>
+            </svg>
+          </li>
+          <li class="skills__stars-item">
+            <svg class="skill__stars" width="20" height="20">
+              <use href="/images/icons.svg#icon-star"></use>
+            </svg>
+          </li>
+          <li class="skills__stars-item">
+            <svg class="skill__stars-gray" width="20" height="20">
+              <use href="/images/icons.svg#icon-star"></use>
+            </svg>
+          </li>
+        </ul>
       </li>
     </ul>
   </div>
