--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,5 +8,7 @@
 @import './layout/header';
 @import './layout/hero';
 @import './layout/about';
+@import './layout/skills';
+@import './layout/portfolio';
 
 @import './layout/mobile-menu';
