mob-version add

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,14 +1,32 @@
 <footer class="footer">
   <div class="container">
     <h2 class="section-title">Contacts</h2>
-    <p class="footer-text">Want to know more or just chat? You are welcome!</p>
-    <button class="button" type="button">Send message</button>
+    <div class="footer__text-box">
+      <p class="footer__text">Want to know more or just chat? You are welcome!</p>
+    </div>
+    <button class="button send-btn" type="button">Send message</button>
     <ul class="social__list list">
-      <li class="social__item"></li>
-      <li class="social__item"></li>
-      <li class="social__item"></li>
-      <li class="social__item"></li>
+      <li class="social__item">
+        <svg class="social__item-logo" width="40" height="40">
+          <use href="/images/icons.svg#icon-linked-in"></use>
+        </svg>
+      </li>
+      <li class="social__item">
+        <svg class="social__item-logo" width="40" height="40">
+          <use href="/images/icons.svg#icon-instagram"></use>
+        </svg>
+      </li>
+      <li class="social__item">
+        <svg class="social__item-logo" width="40" height="40">
+          <use href="/images/icons.svg#icon-behance"></use>
+        </svg>
+      </li>
+      <li class="social__item">
+        <svg class="social__item-logo" width="40" height="40">
+          <use href="/images/icons.svg#icon-surface"></use>
+        </svg>
+      </li>
     </ul>
-    <p class="social__text">Like me on LinkedIn, Instagram, Behance, Dribble</p>
+    <p class="social__text">Like me on<br />LinkedIn, Instagram, Behance, Dribble</p>
   </div>
 </footer>
