--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -5,7 +5,6 @@
         padding-top: 128px;
         padding-bottom: 105px;
     }
-
 		&__text {
             margin-bottom: 37px;
             font-size: 18px;
@@ -33,4 +32,17 @@
     position: absolute;
     right: 30px;
     cursor: pointer;
+}
+
+.social__text {
+    margin-top: 48px;
+    font-size: 18px;
+    line-height: 1.22;
+    text-align: center;
+    color: $grey-text-color;
+}
+
+.hero__img {
+    display: flex;
+    justify-content: center;
 }
