--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,5 +10,6 @@
 @import './layout/about';
 @import './layout/skills';
 @import './layout/portfolio';
+@import './layout/footer';
 
 @import './layout/mobile-menu';
