--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about section">
+<section class="about section" id="about">
   <div class="container">
     <h2 class="section-title">About me</h2>
     <ul class="about__list list">
