--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero" id="home">
   <div class="container">
     <button class="button menu-btn" aria-expanded="false" type="button" data-menu-open>
       <svg class="" width="33" height="20">
