--- a/src/partials/portfolio.html
+++ b/src/partials/portfolio.html
@@ -1,4 +1,4 @@
-<section class="portfolio">
+<section class="portfolio" id="portfolio">
   <div class="container">
     <h2 class="section-title">Portfolio</h2>
     <ul class="portfolio__list list">
@@ -20,7 +20,7 @@
             alt="human"
           />
         </picture>
-        <p class="portfolio__text">Online fashion store - Homepage</p>
+        <a href="#" class="portfolio__text link">Online fashion store - Homepage</a>
       </li>
       <li class="portfolio__item">
         <picture class="portfolio__img">
@@ -40,7 +40,7 @@
             alt="human"
           />
         </picture>
-        <p class="portfolio__text">Reebok Store - Concept</p>
+        <a href="#" class="portfolio__text link">Reebok Store - Concept</a>
       </li>
       <li class="portfolio__item">
         <picture class="portfolio__img">
@@ -60,7 +60,7 @@
             alt="human"
           />
         </picture>
-        <p class="portfolio__text">Braun Landing Page - Concept</p>
+        <a href="#" class="portfolio__text link">Braun Landing Page - Concept</a>
       </li>
     </ul>
   </div>
