--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" id="contacts">
   <div class="container">
     <h2 class="section-title">Contacts</h2>
     <div class="footer__text-box">
@@ -7,24 +7,32 @@
     <button class="button send-btn" type="button">Send message</button>
     <ul class="social__list list">
       <li class="social__item">
-        <svg class="social__item-logo" width="40" height="40">
-          <use href="/images/icons.svg#icon-linked-in"></use>
-        </svg>
+        <a href="#">
+          <svg class="social__item-logo" width="40" height="40">
+            <use href="/images/icons.svg#icon-linked-in"></use>
+          </svg>
+        </a>
       </li>
       <li class="social__item">
-        <svg class="social__item-logo" width="40" height="40">
-          <use href="/images/icons.svg#icon-instagram"></use>
-        </svg>
+        <a href="#">
+          <svg class="social__item-logo" width="40" height="40">
+            <use href="/images/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
       </li>
       <li class="social__item">
-        <svg class="social__item-logo" width="40" height="40">
-          <use href="/images/icons.svg#icon-behance"></use>
-        </svg>
+        <a href="#">
+          <svg class="social__item-logo" width="40" height="40">
+            <use href="/images/icons.svg#icon-behance"></use>
+          </svg>
+        </a>
       </li>
       <li class="social__item">
-        <svg class="social__item-logo" width="40" height="40">
-          <use href="/images/icons.svg#icon-surface"></use>
-        </svg>
+        <a href="#">
+          <svg class="social__item-logo" width="40" height="40">
+            <use href="/images/icons.svg#icon-surface"></use>
+          </svg>
+        </a>
       </li>
     </ul>
     <p class="social__text">Like me on<br />LinkedIn, Instagram, Behance, Dribble</p>
