--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -6,18 +6,18 @@
       </svg>
     </button>
     <ul class="mob-menu__list list">
-      <li class="mob-menu__item"><a class="mob-menu__link link current">Home</a></li>
-      <li class="mob-menu__item"><a class="mob-menu__link link">About me</a></li>
-      <li class="mob-menu__item"><a class="mob-menu__link link">Skills</a></li>
-      <li class="mob-menu__item"><a class="mob-menu__link link">Portfolio</a></li>
-      <li class="mob-menu__item"><a class="mob-menu__link link">Contacts</a></li>
+      <li class="mob-menu__item"><a class="mob-menu__link link current" href="#home">Home</a></li>
+      <li class="mob-menu__item"><a class="mob-menu__link link" href="#about">About me</a></li>
+      <li class="mob-menu__item"><a class="mob-menu__link link" href="#skills">Skills</a></li>
+      <li class="mob-menu__item"><a class="mob-menu__link link" href="#portfolio">Portfolio</a></li>
+      <li class="mob-menu__item"><a class="mob-menu__link link" href="#cont">Contacts</a></li>
     </ul>
     <ul class="mob-menu__lang-list list">
       <li class="mob-menu__lang-item">
-        <a class="mob-menu__lang-link">ru&thinsp;</a>
+        <a href="#" class="mob-menu__lang-link link">ru&thinsp;</a>
       </li>
       <li class="mob-menu__lang-item">
-        <a class="mob-menu__lang-link eng current">&thinsp;en</a>
+        <a href="#" class="mob-menu__lang-link link eng current">&thinsp;en</a>
       </li>
     </ul>
   </div>
