--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,10 @@
   <div class="container">
     <h2 class="section-title">Contacts</h2>
     <div class="footer__text-box">
-      <p class="footer__text">Want to know more or just chat? You are welcome!</p>
+      <p class="footer__text">
+        Want to know more or just chat?<br />
+        You are welcome!
+      </p>
     </div>
     <button class="button send-btn" type="button">Send message</button>
     <ul class="social__list list">
