--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -12,13 +12,13 @@
       <li class="mob-menu__item"><a class="mob-menu__link link" href="#portfolio">Portfolio</a></li>
       <li class="mob-menu__item"><a class="mob-menu__link link" href="#cont">Contacts</a></li>
     </ul>
-    <ul class="mob-menu__lang-list list">
+    <!-- <ul class="mob-menu__lang-list list">
       <li class="mob-menu__lang-item">
         <a href="#" class="mob-menu__lang-link link">ru&thinsp;</a>
       </li>
       <li class="mob-menu__lang-item">
         <a href="#" class="mob-menu__lang-link link eng current">&thinsp;en</a>
       </li>
-    </ul>
+    </ul> -->
   </div>
 </div>
