--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,15 +1,17 @@
 <section class="about section" id="about">
   <div class="container">
     <h2 class="section-title">About me</h2>
-    <ul class="about__list list">
-      <li class="about__item">
-        Hi, I'm Denis – UX/UI designer from Minsk. I'm interested in design and everything connected
-        with it.
-      </li>
-      <li class="about__item">
-        I'm studying at courses "Web and mobile design interfaces" in IT-Academy.
-      </li>
-      <li class="about__item">Ready to implement excellent projects with wonderful people.</li>
-    </ul>
+    <div class="about__box">
+      <ul class="about__list list">
+        <li class="about__item">
+          Hi, I'm Denis – UX/UI designer from Minsk. I'm interested in design and everything
+          connected with it.
+        </li>
+        <li class="about__item">
+          I'm studying at courses "Web and mobile design interfaces" in IT-Academy.
+        </li>
+        <li class="about__item">Ready to implement excellent projects with wonderful people.</li>
+      </ul>
+    </div>
   </div>
 </section>
