--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,11 @@
-<header class="header"></header>
+<header class="header">
+  <div class="container">
+    <ul class="header__list list">
+      <li class="header__item"><a href="#" class="header__link link current">Home</a></li>
+      <li class="header__item"><a href="#" class="header__link link">About me</a></li>
+      <li class="header__item"><a href="#" class="header__link link">Skills</a></li>
+      <li class="header__item"><a href="#" class="header__link link">Portfolio</a></li>
+      <li class="header__item"><a href="#" class="header__link link">Contacts</a></li>
+    </ul>
+  </div>
+</header>
