--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -6,14 +6,26 @@
       </svg>
     </button>
     <div class="hero__box">
-      <h1 class="hero__title">Denis Novik</h1>
+      <div class="hero__title-box">
+        <h1 class="hero__title">Denis Novik</h1>
+      </div>
+      <div class="hero__text">UX | UI designer <br />24 years old, Minsk</div>
+      <div class="lang-box">
+        <ul class="menu__lang-list list">
+          <li class="menu__lang-item">
+            <a href="#" class="menu__lang-link link">ru&thinsp;</a>
+          </li>
+          <li class="menu__lang-item">
+            <a href="#" class="menu__lang-link link eng current">&thinsp;en</a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <p class="hero__text">UX | UI designer <br />24 years old, Minsk</p>
     <picture class="hero__img">
       <source
         class="hero__img-member"
         srcset="./images/hero-desk-1-1x.jpg 1x, ./images/hero-desk-1-2x.jpg 2x"
-        media="(min-width:1024px)"
+        media="(min-width:768px)"
       />
       <source
         class="hero__img-member"
