--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -3,5 +3,6 @@
     margin-right: auto;
     padding-left: 30px;
     padding-right: 30px;
-    width: 100vw;
+    // width: 100vw;
+    width: 100%;
 }
