--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -2,10 +2,24 @@
     background-color: $bg-gray-color;
     padding-top: 82px;
     padding-bottom: 76px;
+    @media screen and (min-width:768px){
+        padding-top: 120px;
+        padding-bottom: 108px;
+    }
 }
-
+.about__box {
+    margin: 0 auto;
+    max-width: 316px;
+    @media screen and (min-width:768px){
+        max-width: 485px;
+    }
+}
 .about__list{
     margin-top: 30px;
+    @media screen and (min-width:768px){
+        margin-top: 16px;
+        
+    }
 }
 .about__item {
     text-align: center;
