--- a/src/sass/layout/_portfolio.scss
+++ b/src/sass/layout/_portfolio.scss
@@ -2,6 +2,10 @@
     padding-top: 82px;
     padding-bottom: 80px;
     background-color: $bg-gray-color;
+    @media screen and (min-width:768px){
+        padding-top: 112px;
+        padding-bottom: 96px;
+    }
 }
 
 .portfolio__list {
@@ -9,6 +13,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media screen and (min-width:768px){
+        margin-top: 48px;
+        
+    }
 }
 
 .portfolio__text {
@@ -18,6 +26,10 @@
     font-size: 18px;
     line-height: 1.22;
     color: inherit;
+    @media screen and (min-width:768px){
+        margin-top: 45px;
+        
+    }
 }
 
 .portfolio__item {
@@ -26,7 +38,12 @@
     flex-direction: column;
     &:not(:first-child){
         margin-top: 78px;
+        @media screen and (min-width:768px){
+            margin-top: 100px;
+        
+        }
     }
+    
 }
 
 .portfolio__img {
