--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,7 +7,7 @@
         You are welcome!
       </p>
     </div>
-    <button class="button send-btn" type="button">Send message</button>
+    <button class="button send-btn" type="submit">Send message</button>
     <ul class="social__list list">
       <li class="social__item">
         <a href="#">
