--- a/src/partials/portfolio.html
+++ b/src/partials/portfolio.html
@@ -20,7 +20,7 @@
             alt="human"
           />
         </picture>
-        <a href="#" class="portfolio__text link">Online fashion store - Homepage</a>
+        <a href="#" class="portfolio__link link">Online fashion store - Homepage</a>
       </li>
       <li class="portfolio__item">
         <picture class="portfolio__img">
@@ -40,7 +40,7 @@
             alt="human"
           />
         </picture>
-        <a href="#" class="portfolio__text link">Reebok Store - Concept</a>
+        <a href="#" class="portfolio__link link">Reebok Store - Concept</a>
       </li>
       <li class="portfolio__item">
         <picture class="portfolio__img">
@@ -60,7 +60,7 @@
             alt="human"
           />
         </picture>
-        <a href="#" class="portfolio__text link">Braun Landing Page - Concept</a>
+        <a href="#" class="portfolio__link link">Braun Landing Page - Concept</a>
       </li>
     </ul>
   </div>
