--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -69,7 +69,19 @@
     font-family: 'Gilroy-bold', sans-serif;
     font-size: 16px;
     line-height: 1.25;
+    padding: 1px 0;
+    border-radius: 5px;
+    transition: $transition;
+    &:hover {
+        background-color: $black-text-color;
+        color: $grey-text-color;
+    }
+    &:focus {
+        background-color: $black-text-color;
+        color: $grey-text-color;
+    }
 }
+
 .menu__lang-link.eng::before {
     content: '|';
     color: $black-text-color;
