--- a/src/sass/utils/_vars.scss
+++ b/src/sass/utils/_vars.scss
@@ -20,6 +20,6 @@ $grey-text-color: #828282;
 
 $bg-gray-color: #F6F6F6;
 
-$accent-color: #d41443;
+$accent-color: #9002bb;
 
 $transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
