scroll-up btn add

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,7 @@
 
 @import './components/container';
 @import './components/section-title';
+@import './components/scrollup';
 
 
 @import './layout/header';
